fix (body): overflow hidden

--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   max-width: 100%;
+  overflow-x: hidden;
 }
 
 header {
