--- a/sass_files/_timeline.scss
+++ b/sass_files/_timeline.scss
@@ -5,6 +5,12 @@
     display:flex;
     flex-direction:row;
     width:100%;
+        &_left{
+            
+        }
+        &_right{
+            
+        }
     }
     &_cache{
         height:100%;
